overflow issue solve

--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -8,4 +8,5 @@
 html,body{
     box-sizing: border-box;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
